# sphinx-immaterial

./: .buildinfo  .clang-format  .eslintignore  .eslintrc  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  .stylelintrc  CONTRIBUTING.md  LICENSE  MKDOCS_MATERIAL_MERGE_BASE  README.rst  additional_samples.html  admonitions.html  api.html  block_annotations.html  code_annotations.html  code_syntax_highlighting.html  codecov.yml  content_tabs.html  cpp.html  cpp_apigen_demo.html  cppreference.html  customization.html  demo_api.html  dev-requirements.txt  external_cpp_references.html  format_signatures.html  genindex.html  graphviz.html  index.html  inline_icons.html  json.html  keys.html  merge_from_mkdocs_material.py  mermaid_diagrams.html  myst_typography.html  noxfile.py  objects.inv  (+20 more)
.doctrees/: additional_samples.doctree  admonitions.doctree  api.doctree  block_annotations.doctree  code_annotations.doctree  code_syntax_highlighting.doctree  content_tabs.doctree  cpp.doctree  cpp_apigen_demo.doctree  cppreference.doctree  customization.doctree  demo_api.doctree  environment.pickle  external_cpp_references.doctree  format_signatures.doctree  graphviz.doctree  index.doctree  inline_icons.doctree  json.doctree  keys.doctree  mermaid_diagrams.doctree  myst_typography.doctree  python.doctree  python_apigen_demo.doctree  rst_basics.doctree  specimen.doctree  subpage1.doctree  subpage1subpage1.doctree  subpage1subpage2.doctree  subpage2.doctree  task_lists.doctree  theme_result.doctree
.github/: dependabot.yml
_modules/: index.html  tensorstore_demo.html  type_param_demo.html
_sources/: additional_samples.rst.txt  admonitions.rst.txt  api.rst.txt  block_annotations.rst.txt  code_annotations.rst.txt  content_tabs.rst.txt  cpp.rst.txt  cpp_apigen_demo.rst.txt  cppreference.rst.txt  customization.rst.txt  demo_api.rst.txt  external_cpp_references.rst.txt  format_signatures.rst.txt  graphviz.rst.txt  index.rst.txt  inline_icons.rst.txt  keys.rst.txt  mermaid_diagrams.rst.txt  myst_typography.md.txt  task_lists.rst.txt
_static/: documentation_options.js  extra_css.css  sphinx_immaterial_theme.0281eafc4c7311c38.min.css  sphinx_immaterial_theme.116bfe6baf097be33.min.css  sphinx_immaterial_theme.13b31cea4616cd26f.min.css  sphinx_immaterial_theme.1b5b7a2d5891aec19.min.js  sphinx_immaterial_theme.1b5b7a2d5891aec19.min.js.map  sphinx_immaterial_theme.247a40c14d4fe5de2.min.css  sphinx_immaterial_theme.2481436ea7e29c808.min.css  sphinx_immaterial_theme.2481436ea7e29c808.min.css.map  sphinx_immaterial_theme.257f10976cae118df.min.css  sphinx_immaterial_theme.257f10976cae118df.min.css.map  sphinx_immaterial_theme.32136f45f91ae6956.min.js  sphinx_immaterial_theme.32136f45f91ae6956.min.js.map  sphinx_immaterial_theme.342d6c02f0947aa3c.min.css  sphinx_immaterial_theme.3bdac1653f54f9e56.min.css  sphinx_immaterial_theme.3bdac1653f54f9e56.min.css.map  sphinx_immaterial_theme.3c111fe932309d4fc.min.css  sphinx_immaterial_theme.48b1f36c1777f6fe9.min.js  sphinx_immaterial_theme.48b1f36c1777f6fe9.min.js.map  sphinx_immaterial_theme.49169256ed8d45ee1.min.css  sphinx_immaterial_theme.49169256ed8d45ee1.min.css.map  sphinx_immaterial_theme.5e9ce7dc80adc37ec.min.css  sphinx_immaterial_theme.774a8fc06f7b933a7.min.css  sphinx_immaterial_theme.774a8fc06f7b933a7.min.css.map  sphinx_immaterial_theme.7db53a059cf35f9bf.min.css  sphinx_immaterial_theme.7db53a059cf35f9bf.min.css.map  sphinx_immaterial_theme.828e072631d773743.min.css  sphinx_immaterial_theme.8adab8c4a512cc636.min.css  sphinx_immaterial_theme.9cfd0ac2cb16e9c20.min.css  sphinx_immaterial_theme.9cfd0ac2cb16e9c20.min.css.map  sphinx_immaterial_theme.a4d2c5990674c5726.min.css  sphinx_immaterial_theme.a820a2992a7ec5c51.min.css  sphinx_immaterial_theme.b26c02e5c3d38b40b.min.css  sphinx_immaterial_theme.cea6a0c1d5b0618cf.min.js  sphinx_immaterial_theme.cea6a0c1d5b0618cf.min.js.map  sphinx_immaterial_theme.d1a3a7cc6b8d16324.min.css  sphinx_immaterial_theme.d1a3a7cc6b8d16324.min.css.map  sphinx_immaterial_theme.d25202e66b2b6f62d.min.css  sphinx_immaterial_theme.d831fa6e787f64ad4.min.css  (+4 more)
apidoc/: format_signatures.html  index.html
cpp_apigen_generated/: cpp_apigen_demo.Array.Array-convert.html  cpp_apigen_demo.Array.Array-data-shape.html  cpp_apigen_demo.Array.data.html  cpp_apigen_demo.Array.html  cpp_apigen_demo.Array.operator-subscript.html  cpp_apigen_demo.Array.order.html  cpp_apigen_demo.Array.shape.html  cpp_apigen_demo.DataOrder.html  cpp_apigen_demo.IndexInterval.IndexInterval.html  cpp_apigen_demo.IndexInterval.html  cpp_apigen_demo.IndexInterval.lower.html  cpp_apigen_demo.IndexInterval.operator-shift_left.html  cpp_apigen_demo.IndexInterval.upper.html  cpp_apigen_demo.Union.html  cpp_apigen_demo.operator-shift_left.html
docs/: additional_samples.rst  admonitions.rst  api.rst  block_annotations.rst  buttons.rst  changelog.rst  code_annotations.rst  code_syntax_highlighting.rst  conf.py  content_tabs.rst  cpp.rst  cpp_apigen_demo.rst  cppreference.rst  customization.rst  demo_api.rst  external_cpp_references.rst  favicon.xcf  format_signatures.rst  graphviz.rst  index.rst  inheritance_schema.yml  inline_icons.rst  json.rst  keys.rst  logo.xcf  math.rst  mermaid_diagrams.rst  myst_typography.md  python.rst  python_apigen.rst  python_apigen_demo.rst  requirements.txt  rst_basics.rst  specimen.rst  subpage1.rst  subpage1subpage1.rst  subpage1subpage2.rst  subpage2.rst  task_lists.rst  test.dot  (+2 more)
python_apigen_generated/: Derived.html  Dim.__init__-exclusive_max.html  Dim.__init__-inclusive_max.html  Dim.__init__-size.html  Dim.__init__-unbounded.html  Dim.exclusive_max.html  Dim.html  Dim.inclusive_min.html  Dim.label.html  Dim.size.html  DimExpression.__getitem__.html  DimExpression.diagonal.html  DimExpression.html  DimExpression.label.html  DimExpression.translate_to.html  DimExpression.vindex.html  DimensionSelection.foo.html  DimensionSelection.html  Foo.bar.html  Foo.html  FooSubclass.baz.html  FooSubclass.html  FooSubclass.overloaded_method.html  IndexDomain.__getitem__-domain.html  IndexDomain.__getitem__-expr.html  IndexDomain.html  (+31 more)
(+528 files in other folders)
