[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]

[tool.pyright]
typeCheckingMode = "basic" # avoid 'strict' because it doesn't allow downgrading checks' severity
reportGeneralTypeIssues = false # TODO (mostly related to docutils, eg. concatenation of nodes and node.get() calls)
# reportFunctionMemberAccess = "waring" WILL NOT FIX (rST roles conventionally violate this)
reportMissingTypeStubs = "warning"
# reportImportCycles = true # TODO (should be solved during refactor)
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportWildcardImportFromLibrary = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true  # FYI mostly related to sphinx app/builder env properties
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
# reportPrivateUsage = "warning" # WILL NOT FIX (some monkey patching requires using private members)
reportPrivateImportUsage = false  # WILL NOT FIX (due to aliases about different python versions)
reportConstantRedefinition = true
# reportIncompatibleMethodOverride = "warning" # WILL NOT FIX (we will not be subject to deps' generic typing)
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
# reportMissingSuperCall = "warning" # BUGGY (rely on pylint for better accuracy)
reportUninitializedInstanceVariable = "warning"
reportUnknownParameterType = true
# reportUnknownArgumentType = true # WILL NOT FIX (mostly related to __get__ on iterables and sequences)
# reportUnknownLambdaType = true # WILL NOT FIX (typing lambdas' params must be inferred - no PEP provides a explicit typing solution)
# reportUnknownVariableType = true # WILL NOT FIX (mostly related to "blank" defaults)
# reportUnknownMemberType = true # BUGGY/WILL NOT FIX (mostly related to "blank" defaults and base class methods)
# reportMissingParameterType = true # BUGGY (use reportUnknownParameterType instead)
reportMissingTypeArgument = "warning"
# reportCallInDefaultInitializer = "warning" # WILL NOT FIX (creating rST role functions conventionally violate this)
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = "information"
reportUnnecessaryComparison = true
reportUnboundVariable = true
reportUnusedExpression = true
reportUnnecessaryTypeIgnoreComment = "information"
include = ["sphinx_immaterial/**", "setup.py", "merge_from_mkdocs_material.py"]
